# qWalkBuilder

./: .gitignore  README.md  __init__.py  buildQC.py  eigenOp.py  pyproject.toml  requirements.txt  runQC.py  walk_vectors.py
qWalkBuilder/: __init__.py  buildQC.py  quantum_circuit.py  quantum_walk.py  runQC.py
qWalkBuilder/operators/: __init__.py  circuit.py  init.py  shiftcoin.py
qWalkBuilder/utils/: eigenOp.py  walk_register.py  walk_result.py
qWalkBuilder/walk_operators/: __init__.py  coin.py  init.py  shift.py  shiftCoin.py
utils/: fluctuation_measures.py
